[package]
name = "dprom"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dprom-file-gauge"
path = "src/cmd/file_gauge.rs"

[[bin]]
name = "dprom-export"
path = "src/cmd/export.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
derive_more = "0.99"
futures = "0.3"
itertools = "0.10.5"
serde = "1.0.149"
serde_derive = "1.0.149"
slog = { version = "2", features = ["max_level_trace", "release_max_level_info"] }
sloggers = "2"
structopt = { version = "0.3", features = ["color"] }
tokio = { version = "1", features = ["macros", "rt", "fs", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7.4"
toml = "0.5.9"
tracing = "0.1"
warp = { version = "0.3.3", features = ["tls"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
